prod_snapshot_2015-09-24_1030/objects/FormStack_Data__c.object
<CustomObject>
    <fields>
        <fullName>Checking_Company_Name__c</fullName>
        <label>Checking Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Company_Name__c</fullName>
        <label>Deposit Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>FormStack Data</relationshipLabel>
        <relationshipName>FormStack_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>W8_Company_Name__c</fullName>
        <label>W8 Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W9_Company_Name__c</fullName>
        <label>W9 Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FormStack Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>Opportunity__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FS-{00000000}</displayFormat>
        <label>FormStack Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FormStack Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>